<resources>
    <string name="app_name">TwoActivities</string>
    <string name="btn_send_label">Send</string>
    <string name="activity2_name">Second Activity</string>
    <string name="text_header">Message Received</string>
    <string name="msg_hint">Enter your msg here</string>
    <string name="btn_second">reply</string>
    <string name="editText_second">Enter your reply here</string>
    <string name="text_header_reply">Reply Received</string>
</resources>
